# ai-buildcamp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
01-foundation-hw/: chunk_books.py  convert_books.py  download_books.py  hw1.ipynb  hw1_capstone_qq.md
